// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup [common] example testing should match snapshot(s) for default 1`] = `
<span
  className="lucid-RadioGroup"
>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Superman",
      }
    }
    callbackId={0}
    isDisabled={false}
    isSelected={true}
    key="0"
    name="lucid-RadioGroup-2"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <RadioGroup.Label>
      Superman
    </RadioGroup.Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Batman",
      }
    }
    callbackId={1}
    isDisabled={false}
    isSelected={false}
    key="1"
    name="lucid-RadioGroup-2"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <RadioGroup.Label>
      Batman
    </RadioGroup.Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Wonder Woman",
      }
    }
    callbackId={2}
    isDisabled={false}
    isSelected={false}
    key="2"
    name="lucid-RadioGroup-2"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <RadioGroup.Label>
      Wonder Woman
    </RadioGroup.Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Aquaman",
      }
    }
    callbackId={3}
    isDisabled={false}
    isSelected={false}
    key="3"
    name="lucid-RadioGroup-2"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <RadioGroup.Label>
      Aquaman
    </RadioGroup.Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Robin",
      }
    }
    callbackId={4}
    isDisabled={false}
    isSelected={false}
    key="4"
    name="lucid-RadioGroup-2"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <RadioGroup.Label>
      Robin
    </RadioGroup.Label>
  </RadioButtonLabeled>
</span>
`;

exports[`RadioGroup [common] example testing should match snapshot(s) for is-disabled 1`] = `
<span
  className="lucid-RadioGroup"
>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Superman",
      }
    }
    callbackId={0}
    isDisabled={true}
    isSelected={true}
    key="0"
    name="lucid-RadioGroup-2"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <RadioGroup.Label>
      Superman
    </RadioGroup.Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Batman",
      }
    }
    callbackId={1}
    isDisabled={true}
    isSelected={false}
    key="1"
    name="lucid-RadioGroup-2"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <RadioGroup.Label>
      Batman
    </RadioGroup.Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Wonder Woman",
      }
    }
    callbackId={2}
    isDisabled={true}
    isSelected={false}
    key="2"
    name="lucid-RadioGroup-2"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <RadioGroup.Label>
      Wonder Woman
    </RadioGroup.Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Aquaman",
      }
    }
    callbackId={3}
    isDisabled={true}
    isSelected={false}
    key="3"
    name="lucid-RadioGroup-2"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <RadioGroup.Label>
      Aquaman
    </RadioGroup.Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Robin",
      }
    }
    callbackId={4}
    isDisabled={true}
    isSelected={false}
    key="4"
    name="lucid-RadioGroup-2"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <RadioGroup.Label>
      Robin
    </RadioGroup.Label>
  </RadioButtonLabeled>
</span>
`;

exports[`RadioGroup [common] example testing should match snapshot(s) for nested-select 1`] = `
<span
  className="lucid-RadioGroup"
>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Alvin",
      }
    }
    callbackId={0}
    isDisabled={false}
    isSelected={true}
    key="0"
    name="lucid-RadioGroup-2"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <RadioGroup.Label>
      Alvin
    </RadioGroup.Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": Array [
          "Simon",
          <RadioGroup>
            <RadioButton
              isDisabled={false}
              isSelected={false}
              onSelect={[Function]}
            >
              <RadioGroup.Label>
                1
              </RadioGroup.Label>
            </RadioButton>
            <RadioButton
              isDisabled={false}
              isSelected={false}
              onSelect={[Function]}
            >
              <RadioGroup.Label>
                2
              </RadioGroup.Label>
            </RadioButton>
          </RadioGroup>,
        ],
      }
    }
    callbackId={1}
    isDisabled={false}
    isSelected={false}
    key="1"
    name="lucid-RadioGroup-2"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <RadioGroup.Label>
      Simon
      <RadioGroup>
        <RadioButton
          isDisabled={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <RadioGroup.Label>
            1
          </RadioGroup.Label>
        </RadioButton>
        <RadioButton
          isDisabled={false}
          isSelected={false}
          onSelect={[Function]}
        >
          <RadioGroup.Label>
            2
          </RadioGroup.Label>
        </RadioButton>
      </RadioGroup>
    </RadioGroup.Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": <SingleSelect>
          <SingleSelect.Option>
            One
          </SingleSelect.Option>
          <SingleSelect.Option>
            Two
          </SingleSelect.Option>
        </SingleSelect>,
      }
    }
    callbackId={2}
    isDisabled={false}
    isSelected={false}
    key="2"
    name="lucid-RadioGroup-2"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <RadioGroup.Label>
      <SingleSelect>
        <SingleSelect.Option>
          One
        </SingleSelect.Option>
        <SingleSelect.Option>
          Two
        </SingleSelect.Option>
      </SingleSelect>
    </RadioGroup.Label>
  </RadioButtonLabeled>
</span>
`;

exports[`RadioGroup [common] example testing should match snapshot(s) for selected-index-as-prop 1`] = `
<span
  className="lucid-RadioGroup"
  style={
    Object {
      "display": "inline-flex",
      "flexDirection": "column",
    }
  }
>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Captain America",
      }
    }
    callbackId={0}
    isDisabled={false}
    isSelected={false}
    key="0"
    name="name"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <RadioGroup.Label>
      Captain America
    </RadioGroup.Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Iron Man",
      }
    }
    callbackId={1}
    isDisabled={false}
    isSelected={false}
    key="1"
    name="name"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <RadioGroup.Label>
      Iron Man
    </RadioGroup.Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Thor",
      }
    }
    callbackId={2}
    isDisabled={false}
    isSelected={false}
    key="2"
    name="name"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <RadioGroup.Label>
      Thor
    </RadioGroup.Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Hulk",
      }
    }
    callbackId={3}
    isDisabled={false}
    isSelected={true}
    key="3"
    name="name"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <RadioGroup.Label>
      Hulk
    </RadioGroup.Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Black Widow",
      }
    }
    callbackId={4}
    isDisabled={false}
    isSelected={false}
    key="4"
    name="name"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <RadioGroup.Label>
      Black Widow
    </RadioGroup.Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Hawkeye",
      }
    }
    callbackId={5}
    isDisabled={false}
    isSelected={false}
    key="5"
    name="name"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <RadioGroup.Label>
      Hawkeye
    </RadioGroup.Label>
  </RadioButtonLabeled>
</span>
`;

exports[`RadioGroup [common] example testing should match snapshot(s) for selected-index-from-child 1`] = `
<span
  className="lucid-RadioGroup"
  style={
    Object {
      "display": "inline-flex",
      "flexDirection": "column",
    }
  }
>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Leonardo",
      }
    }
    callbackId={0}
    isDisabled={false}
    isSelected={false}
    key="0"
    name="name"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <RadioGroup.Label>
      Leonardo
    </RadioGroup.Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Raphael",
      }
    }
    callbackId={1}
    isDisabled={false}
    isSelected={false}
    key="1"
    name="name"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <RadioGroup.Label>
      Raphael
    </RadioGroup.Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Donatello",
      }
    }
    callbackId={2}
    isDisabled={false}
    isSelected={true}
    key="2"
    name="name"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <RadioGroup.Label>
      Donatello
    </RadioGroup.Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Michelangelo",
      }
    }
    callbackId={3}
    isDisabled={false}
    isSelected={false}
    key="3"
    name="name"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <RadioGroup.Label>
      Michelangelo
    </RadioGroup.Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Venus",
      }
    }
    callbackId={4}
    isDisabled={false}
    isSelected={false}
    key="4"
    name="name"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <RadioGroup.Label>
      Venus
    </RadioGroup.Label>
  </RadioButtonLabeled>
</span>
`;

exports[`RadioGroup [common] example testing should match snapshot(s) for stateful 1`] = `
<span
  className="lucid-RadioGroup"
>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Alvin",
      }
    }
    callbackId={0}
    isDisabled={false}
    isSelected={true}
    key="0"
    name="lucid-RadioGroup-2"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <RadioGroup.Label>
      Alvin
    </RadioGroup.Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Simon",
      }
    }
    callbackId={1}
    isDisabled={false}
    isSelected={false}
    key="1"
    name="lucid-RadioGroup-2"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <RadioGroup.Label>
      Simon
    </RadioGroup.Label>
  </RadioButtonLabeled>
  <RadioButtonLabeled
    Label={
      Object {
        "children": "Theodore",
      }
    }
    callbackId={2}
    isDisabled={false}
    isSelected={false}
    key="2"
    name="lucid-RadioGroup-2"
    onSelect={[Function]}
    style={
      Object {
        "marginRight": "13px",
      }
    }
  >
    <RadioGroup.Label>
      Theodore
    </RadioGroup.Label>
  </RadioButtonLabeled>
</span>
`;
